	PR c++/27094 	* pt.c (tsubst_default_argument): Increment function_depth around 	call to tsubst_expr. 	* parser.c (cp_parser_parameter_declaration): Likewise. 	* decl2.c (mark_used): Tidy. 	PR c++/27094 	* g++.dg/template/defarg8.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113399 138bc75d-0d04-0410-961f-82ee72b054a4